--- a/clusters/test/one/release.yaml
+++ b/clusters/test/one/release.yaml
@@ -1,8 +1,9 @@
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
   name: test
-  namespace: zero
+  namespace: one
 spec:
   interval: 5m
   chart:
